--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,5 @@
+/*Non-page specific styles*/
+
 * {
     padding: 0;
     margin: 0;
@@ -8,6 +10,7 @@ header {
     height: 5em;
     background-color: lightgray;
     border-bottom: 1px solid black;
+    justify-content: center;
 }
 
 footer {
@@ -20,8 +23,9 @@ footer {
 }
 
 .nav-ul {
-    margin-left: 7.5%;
-
+    margin-left: 5%;
+    margin-top: -2.45em;
+    justify-content: center;
 }
 
 .nav-ul li {
@@ -36,10 +40,33 @@ footer {
     overflow-y: scroll;
 }
 
+#home-main {
+    text-align: center;
+}
+
+#home-main h1 {
+    margin-top: 1.25em;
+}
+
+.main-container::-webkit-scrollbar {
+    display: none;
+}
+
 a {
     text-decoration: none;
 }
 
 #watermelon {
-    width: 100%;
+    width: 50%;
+    height: auto;
+    border: 1px solid black;
+    margin-top: 5em;
+}
+
+.nav-img {
+    width: 3em;
+    height: 3em;
+    display: inline-block;
+    margin-top: 1.25em;
+    margin-left: 2em;
 }
